--- a/src/app/components/passwords/passwords.component.html
+++ b/src/app/components/passwords/passwords.component.html
@@ -1,141 +1,182 @@
 <h1>Passwords</h1>
-<span class="spinner spinner-inline" *ngIf="!page && !error">Loading...</span>
+@if (!page && !error) {
+  <span class="spinner spinner-inline">Loading...</span>
+}
 <app-alert-error [error]="error"></app-alert-error>
 
 <table class="table">
-    <thead *ngIf="hasEntries()">
-        <tr>
-            <th>Service</th>
-            <th>Username</th>
-            <th>Password</th>
-            <th>
-                <input placeholder="search" name="input" class="search" [(ngModel)]="q" #search />
-                <button type="button" class="btn btn-icon btn-sm btn-link add" (click)="add()">
-                    <cds-icon shape="add-text"></cds-icon> add
-                </button>
-            </th>
-        </tr>
+  @if (hasEntries()) {
+    <thead>
+      <tr>
+        <th>Service</th>
+        <th>Username</th>
+        <th>Password</th>
+        <th>
+          <input placeholder="search" name="input" class="search" [(ngModel)]="q" #search />
+          <button type="button" class="btn btn-icon btn-sm btn-link add" (click)="add()">
+            <cds-icon shape="add-text"></cds-icon> add
+          </button>
+        </th>
+      </tr>
     </thead>
-    <tbody>
-        <tr *ngFor="let entry of getEntries(); let i = index">
-            <td>
-                <span *ngIf="!entry.edit">{{entry.service}}</span>
-                <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.service" #service>
-            </td>
-            <td>
-                <span *ngIf="!entry.edit">{{entry.username}}</span>
-                <input *ngIf="entry.edit" type="text" [(ngModel)]="entry.username">
-            </td>
-            <td>
-                <span *ngIf="!entry.edit">{{entry.passwordShow ? decryptPassword(entry.password) : '*********'}}</span>
-                <clr-password-container *ngIf="entry.edit">
-                    <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPasswordFromUi($event.target)">
-                </clr-password-container>
-                
-                <cds-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true" *ngIf="!entry.passwordShow && !entry.edit"></cds-icon>
-                <cds-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false" *ngIf="entry.passwordShow && !entry.edit"></cds-icon>
-            </td>
-            <td class="last">
-                <button type="button" class="btn btn-icon btn-sm" (click)="random(i)" *ngIf="entry.edit"><cds-icon shape="wand"></cds-icon></button>
-                <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false" *ngIf="entry.edit"><cds-icon shape="check"></cds-icon></button>
-                <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i" *ngIf="entry.edit"><cds-icon shape="trash"></cds-icon></button>
-
-                <button class="btn btn-icon btn-sm" (click)="entry.edit=true" *ngIf="!entry.edit"><cds-icon shape="pencil"></cds-icon> edit</button>
-                <button class="btn btn-icon btn-sm btn-primary" (click)="clipboard(i)" *ngIf="!entry.edit"><cds-icon shape="copy-to-clipboard"></cds-icon> copy password</button>
-            </td>
-        </tr>
-        <tr *ngIf="!entries && page">
-            <td colspan="4" class="unlock">
-                <input type="password" class="password" placeholder="master password" (keyup.enter)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''" #unlockPasswordInput>
-                <button class="btn btn-primary" (click)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''">unlock</button>
-            </td>
-        </tr>
-        <tr *ngIf="entries">
-            <td colspan="4" class="add">
-                <button type="button" class="btn btn-icon btn-sm btn-link" (click)="add()">
-                    <cds-icon shape="add-text"></cds-icon> add
-                </button>
-            </td>
-        </tr>
-    </tbody>
+  }
+  <tbody>
+    @for (entry of getEntries(); track entry; let i = $index) {
+      <tr>
+        <td>
+          @if (!entry.edit) {
+            <span>{{entry.service}}</span>
+          } @else {
+            <input type="text" [(ngModel)]="entry.service" #service>
+          }
+        </td>
+        <td>
+          @if (!entry.edit) {
+            <span>{{entry.username}}</span>
+          } @else {
+            <input type="text" [(ngModel)]="entry.username">
+          }
+        </td>
+        <td>
+          @if (!entry.edit) {
+            <span>{{entry.passwordShow ? decryptPassword(entry.password) : '*********'}}</span>
+          } @else {
+            <clr-password-container>
+              <input [type]="entry.passwordShow ? 'text' : 'password'" clrPassword [value]="decryptPassword(entry.password)" (input)="entry.password = encryptPasswordFromUi($event.target)">
+            </clr-password-container>
+          }
+          @if (!entry.passwordShow && !entry.edit) {
+            <cds-icon class="showhide" shape="eye" size="20" (click)="entry.passwordShow = true"></cds-icon>
+          }
+          @if (entry.passwordShow && !entry.edit) {
+            <cds-icon class="showhide" shape="eye-hide" size="20" (click)="entry.passwordShow = false"></cds-icon>
+          }
+        </td>
+        <td class="last">
+          @if (entry.edit) {
+            <button type="button" class="btn btn-icon btn-sm" (click)="random(i)"><cds-icon shape="wand"></cds-icon></button>
+            <button type="button" class="btn btn-icon btn-sm btn-success" (click)="entry.edit=false"><cds-icon shape="check"></cds-icon></button>
+            <button type="button" class="btn btn-icon btn-sm btn-danger" (click)="entryToDelete=i"><cds-icon shape="trash"></cds-icon></button>
+          } @else {
+            <button class="btn btn-icon btn-sm" (click)="entry.edit=true"><cds-icon shape="pencil"></cds-icon> edit</button>
+            <button class="btn btn-icon btn-sm btn-primary" (click)="clipboard(i)"><cds-icon shape="copy-to-clipboard"></cds-icon> copy password</button>
+          }
+        </td>
+      </tr>
+    }
+    @if (!entries && page) {
+      <tr>
+        <td colspan="4" class="unlock">
+          <input type="password" class="password" placeholder="master password" (keyup.enter)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''" #unlockPasswordInput>
+          <button class="btn btn-primary" (click)="unlock(unlockPasswordInput.value);unlockPasswordInput.value=''">unlock</button>
+        </td>
+      </tr>
+    }
+    @if (entries) {
+      <tr>
+        <td colspan="4" class="add">
+          <button type="button" class="btn btn-icon btn-sm btn-link" (click)="add()">
+            <cds-icon shape="add-text"></cds-icon> add
+          </button>
+        </td>
+      </tr>
+    }
+  </tbody>
 </table>
 
-<div class="action" *ngIf="entries && page">
-    <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="showAskPassword()">save</button> 
+@if (entries && page) {
+  <div class="action">
+    <button class="btn" [ngClass]="{'btn-success-outline': success, 'btn-primary': !success}" (click)="showAskPassword()">save</button>
     <button class="btn btn-info-outline" (click)="showExport()">export</button>
     <button class="btn btn-warning-outline" (click)="f.click()">import</button>
     <button class="btn btn-link" [routerLink]="['/']">cancel</button>
     <input type="file" name="file" (change)="import($event)" class="hidden" #f>
-
-    <div class="alert alert-success" role="alert" *ngIf="success || successImport || successExport">
+    @if (success || successImport || successExport) {
+      <div class="alert alert-success" role="alert">
         <div class="alert-items">
-            <div class="alert-item static">
-                <div class="alert-icon-wrapper">
-                    <cds-icon class="alert-icon" shape="check-circle"></cds-icon>
-                </div>
-                <span class="alert-text" *ngIf="success">successfully saved</span>
-                <span class="alert-text" *ngIf="successImport">successfully imported</span>
-                <span class="alert-text" *ngIf="successExport">successfully saved to clipboard</span>
+          <div class="alert-item static">
+            <div class="alert-icon-wrapper">
+              <cds-icon class="alert-icon" shape="check-circle"></cds-icon>
             </div>
+            @if (success) {
+              <span class="alert-text">successfully saved</span>
+            }
+            @if (successImport) {
+              <span class="alert-text">successfully imported</span>
+            }
+            @if (successExport) {
+              <span class="alert-text">successfully saved to clipboard</span>
+            }
+          </div>
         </div>
-    </div>
-</div>
+      </div>
+    }
+  </div>
+}
 
-<div class="modal" *ngIf="entryToDelete!==null">
+@if (entryToDelete!==null) {
+  <div class="modal">
     <div class="modal-dialog" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="modal-body">
-                <p>Really delete {{entries![entryToDelete].service}}?</p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-outline" type="button" (click)="entryToDelete=null">cancel</button>
-                <button class="btn btn-danger" type="button" (click)="delete(entryToDelete); entryToDelete = null;">delete</button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-body">
+          <p>Really delete {{entries![entryToDelete].service}}?</p>
         </div>
+        <div class="modal-footer">
+          <button class="btn btn-outline" type="button" (click)="entryToDelete=null">cancel</button>
+          <button class="btn btn-danger" type="button" (click)="delete(entryToDelete); entryToDelete = null;">delete</button>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+}
 
-<div class="modal" *ngIf="askPassword">
+@if (askPassword) {
+  <div class="modal">
     <div class="modal-dialog" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button aria-label="Close" class="close" type="button" (click)="askPassword=false;password.value='';password2.value=''">
-                    <cds-icon aria-hidden="true" shape="close"></cds-icon>
-                </button>
-                <h3 class="modal-title">Please enter your master password</h3>
-            </div>
-            <div class="modal-body savepassword">
-                <app-alert-error [error]="errorPassword"></app-alert-error>
-                <input type="password" class="password" placeholder="master password" #password>
-                <input type="password" class="password" placeholder="master password again" #password2 (keyup.enter)="save(password.value, password2.value);password.value='';password2.value=''">
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value='';password2.value=''">cancel</button>
-                <button class="btn btn-danger" type="button" (click)="save(password.value, password2.value);password.value='';password2.value=''">save</button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <button aria-label="Close" class="close" type="button" (click)="askPassword=false;password.value='';password2.value=''">
+            <cds-icon aria-hidden="true" shape="close"></cds-icon>
+          </button>
+          <h3 class="modal-title">Please enter your master password</h3>
         </div>
+        <div class="modal-body savepassword">
+          <app-alert-error [error]="errorPassword"></app-alert-error>
+          <input type="password" class="password" placeholder="master password" #password>
+          <input type="password" class="password" placeholder="master password again" #password2 (keyup.enter)="save(password.value, password2.value);password.value='';password2.value=''">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-outline" type="button" (click)="askPassword=false;password.value='';password2.value=''">cancel</button>
+          <button class="btn btn-danger" type="button" (click)="save(password.value, password2.value);password.value='';password2.value=''">save</button>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+}
 
-<div class="modal" *ngIf="export">
+@if (export) {
+  <div class="modal">
     <div class="modal-dialog" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button aria-label="Close" class="close" type="button" (click)="export=false;exportPassword.value=''">
-                    <cds-icon aria-hidden="true" shape="close"></cds-icon>
-                </button>
-                <h3 class="modal-title">Please enter your master password</h3>
-            </div>
-            <div class="modal-body savepassword">
-                <app-alert-error [error]="errorExport"></app-alert-error>
-                <input type="password" class="password" placeholder="master password" #exportPassword (keyup.enter)="exportToClipboard(exportPassword.value);exportPassword.value='';">
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-outline" type="button" (click)="export=false;exportPassword.value=''">cancel</button>
-                <button class="btn btn-danger" type="button" (click)="exportToClipboard(exportPassword.value);exportPassword.value='';">export</button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <button aria-label="Close" class="close" type="button" (click)="export=false;exportPassword.value=''">
+            <cds-icon aria-hidden="true" shape="close"></cds-icon>
+          </button>
+          <h3 class="modal-title">Please enter your master password</h3>
         </div>
+        <div class="modal-body savepassword">
+          <app-alert-error [error]="errorExport"></app-alert-error>
+          <input type="password" class="password" placeholder="master password" #exportPassword (keyup.enter)="exportToClipboard(exportPassword.value);exportPassword.value='';">
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-outline" type="button" (click)="export=false;exportPassword.value=''">cancel</button>
+          <button class="btn btn-danger" type="button" (click)="exportToClipboard(exportPassword.value);exportPassword.value='';">export</button>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
+}
 
-<div class="modal-backdrop" aria-hidden="true" *ngIf="entryToDelete!==null || askPassword || export"></div>
+@if (entryToDelete!==null || askPassword || export) {
+  <div class="modal-backdrop" aria-hidden="true"></div>
+}
