--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,8 +1,11 @@
-<div *ngIf="pages.length>0">
+@if (pages.length>0) {
+  <div>
     <span class="q">searchresults for <span>"{{q}}"</span></span>
-
-    <div class="result" *ngFor="let page of pages">
+    @for (page of pages; track page) {
+      <div class="result">
         <a [routerLink]="['/page', page.id]"><cds-icon [attr.shape]="page.icon" size="md"></cds-icon> <span [innerHTML]="page.title | highlight:q"></span></a>
         <pre [innerHTML]="page.content | searchResult:q | nl2br | highlight:q"></pre>
-    </div>
-</div>
+      </div>
+    }
+  </div>
+}
